// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton should disabled animation 1`] = `
.emotion-0 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  box-sizing: border-box;
  display: inline-block;
  height: 16px;
  line-height: 16px;
  margin: 3px;
  outline: 0px;
  position: relative;
  vertical-align: bottom;
}

.emotion-0>input[type='radio'] {
  box-sizing: border-box;
  cursor: pointer;
  display: inline-block;
  position: absolute;
  top: 0;
  visibility: hidden;
}

.emotion-0>input[type='radio']+label {
  box-sizing: border-box;
  cursor: pointer;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  height: 16px;
  line-height: 16px;
  padding: 0 10px 0 0;
  vertical-align: bottom;
  white-space: nowrap;
}

.emotion-0>input[type='radio']+label:before {
  background: #fff;
  border: 2px solid rgba(54,151,242,0.5);
  border-radius: 50%;
  box-sizing: border-box;
  content: '';
  cursor: pointer;
  display: inline-block;
  height: 16px;
  line-height: 16px;
  margin: 0px 3px -3px 0px;
  width: 16px;
}

.emotion-0>input[type='radio']:hover+label:before {
  border: 2px solid #3697f2;
}

.emotion-0>input[type='radio']:focus+label:before {
  border: 2px solid rgba(54,151,242,0.5);
}

.emotion-0>input[type='radio']:checked+label:before {
  border: 2px solid #3697f2;
}

.emotion-0>input[type='radio']:disabled+label {
  color: #d5d5d5;
  cursor: not-allowed;
}

.emotion-0>input[type='radio']:disabled+label:before {
  border: 2px solid #d5d5d5;
  cursor: not-allowed;
}

.emotion-0>input[type='radio']:checked+label:after {
  background-color: #3697f2;
  border-radius: 50%;
  box-sizing: border-box;
  content: '';
  height: 8px;
  line-height: 8px;
  left: 4px;
  position: absolute;
  top: 4px;
  width: 8px;
}

.emotion-0>input[type='radio']:disabled:checked+label:after {
  color: #d5d5d5;
  border: 2px solid #d5d5d5;
  background-color: #d5d5d5;
  cursor: not-allowed;
}

<div
  class="emotion-0 denali-radiobutton"
  data-testid="radiobutton-wrapper"
>
  <input
    id="radiobutton-test-radiobutton-a"
    name="test-radiobutton"
    type="radio"
    value="a"
  />
  <label
    for="radiobutton-test-radiobutton-a"
  >
    Option A
  </label>
</div>
`;

exports[`RadioButton should render a disabled radio button 1`] = `
.emotion-0 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  box-sizing: border-box;
  display: inline-block;
  height: 16px;
  line-height: 16px;
  margin: 3px;
  outline: 0px;
  position: relative;
  vertical-align: bottom;
}

.emotion-0>input[type='radio'] {
  box-sizing: border-box;
  cursor: pointer;
  display: inline-block;
  position: absolute;
  top: 0;
  visibility: hidden;
}

.emotion-0>input[type='radio']+label {
  box-sizing: border-box;
  cursor: pointer;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  height: 16px;
  line-height: 16px;
  padding: 0 10px 0 0;
  vertical-align: bottom;
  white-space: nowrap;
}

.emotion-0>input[type='radio']+label:before {
  background: #fff;
  border: 2px solid rgba(54,151,242,0.5);
  border-radius: 50%;
  box-sizing: border-box;
  content: '';
  cursor: pointer;
  display: inline-block;
  height: 16px;
  line-height: 16px;
  margin: 0px 3px -3px 0px;
  -webkit-transition: all 0.25s ease-in;
  transition: all 0.25s ease-in;
  width: 16px;
}

.emotion-0>input[type='radio']:hover+label:before {
  border: 2px solid #3697f2;
}

.emotion-0>input[type='radio']:focus+label:before {
  border: 2px solid rgba(54,151,242,0.5);
}

.emotion-0>input[type='radio']:checked+label:before {
  border: 2px solid #3697f2;
}

.emotion-0>input[type='radio']:disabled+label {
  color: #d5d5d5;
  cursor: not-allowed;
}

.emotion-0>input[type='radio']:disabled+label:before {
  border: 2px solid #d5d5d5;
  cursor: not-allowed;
}

.emotion-0>input[type='radio']:checked+label:after {
  background-color: #3697f2;
  border-radius: 50%;
  box-sizing: border-box;
  content: '';
  height: 8px;
  line-height: 8px;
  left: 4px;
  position: absolute;
  top: 4px;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
  width: 8px;
}

.emotion-0>input[type='radio']:disabled:checked+label:after {
  color: #d5d5d5;
  border: 2px solid #d5d5d5;
  background-color: #d5d5d5;
  cursor: not-allowed;
}

<div
  class="emotion-0 denali-radiobutton"
  data-testid="radiobutton-wrapper"
>
  <input
    checked=""
    disabled=""
    id="radiobutton-test-radiobutton-a"
    name="test-radiobutton"
    type="radio"
    value="a"
  />
  <label
    for="radiobutton-test-radiobutton-a"
  >
    Option A
  </label>
</div>
`;

exports[`RadioButton should render selected state 1`] = `
.emotion-0 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  box-sizing: border-box;
  display: inline-block;
  height: 16px;
  line-height: 16px;
  margin: 3px;
  outline: 0px;
  position: relative;
  vertical-align: bottom;
}

.emotion-0>input[type='radio'] {
  box-sizing: border-box;
  cursor: pointer;
  display: inline-block;
  position: absolute;
  top: 0;
  visibility: hidden;
}

.emotion-0>input[type='radio']+label {
  box-sizing: border-box;
  cursor: pointer;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  height: 16px;
  line-height: 16px;
  padding: 0 10px 0 0;
  vertical-align: bottom;
  white-space: nowrap;
}

.emotion-0>input[type='radio']+label:before {
  background: #fff;
  border: 2px solid rgba(54,151,242,0.5);
  border-radius: 50%;
  box-sizing: border-box;
  content: '';
  cursor: pointer;
  display: inline-block;
  height: 16px;
  line-height: 16px;
  margin: 0px 3px -3px 0px;
  -webkit-transition: all 0.25s ease-in;
  transition: all 0.25s ease-in;
  width: 16px;
}

.emotion-0>input[type='radio']:hover+label:before {
  border: 2px solid #3697f2;
}

.emotion-0>input[type='radio']:focus+label:before {
  border: 2px solid rgba(54,151,242,0.5);
}

.emotion-0>input[type='radio']:checked+label:before {
  border: 2px solid #3697f2;
}

.emotion-0>input[type='radio']:disabled+label {
  color: #d5d5d5;
  cursor: not-allowed;
}

.emotion-0>input[type='radio']:disabled+label:before {
  border: 2px solid #d5d5d5;
  cursor: not-allowed;
}

.emotion-0>input[type='radio']:checked+label:after {
  background-color: #3697f2;
  border-radius: 50%;
  box-sizing: border-box;
  content: '';
  height: 8px;
  line-height: 8px;
  left: 4px;
  position: absolute;
  top: 4px;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
  width: 8px;
}

.emotion-0>input[type='radio']:disabled:checked+label:after {
  color: #d5d5d5;
  border: 2px solid #d5d5d5;
  background-color: #d5d5d5;
  cursor: not-allowed;
}

<div
  class="emotion-0 denali-radiobutton"
  data-testid="radiobutton-wrapper"
>
  <input
    checked=""
    id="radiobutton-test-radiobutton-a"
    name="test-radiobutton"
    type="radio"
    value="a"
  />
  <label
    for="radiobutton-test-radiobutton-a"
  >
    Option A
  </label>
</div>
`;

exports[`RadioButton should render unselected state 1`] = `
.emotion-0 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  box-sizing: border-box;
  display: inline-block;
  height: 16px;
  line-height: 16px;
  margin: 3px;
  outline: 0px;
  position: relative;
  vertical-align: bottom;
}

.emotion-0>input[type='radio'] {
  box-sizing: border-box;
  cursor: pointer;
  display: inline-block;
  position: absolute;
  top: 0;
  visibility: hidden;
}

.emotion-0>input[type='radio']+label {
  box-sizing: border-box;
  cursor: pointer;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  height: 16px;
  line-height: 16px;
  padding: 0 10px 0 0;
  vertical-align: bottom;
  white-space: nowrap;
}

.emotion-0>input[type='radio']+label:before {
  background: #fff;
  border: 2px solid rgba(54,151,242,0.5);
  border-radius: 50%;
  box-sizing: border-box;
  content: '';
  cursor: pointer;
  display: inline-block;
  height: 16px;
  line-height: 16px;
  margin: 0px 3px -3px 0px;
  -webkit-transition: all 0.25s ease-in;
  transition: all 0.25s ease-in;
  width: 16px;
}

.emotion-0>input[type='radio']:hover+label:before {
  border: 2px solid #3697f2;
}

.emotion-0>input[type='radio']:focus+label:before {
  border: 2px solid rgba(54,151,242,0.5);
}

.emotion-0>input[type='radio']:checked+label:before {
  border: 2px solid #3697f2;
}

.emotion-0>input[type='radio']:disabled+label {
  color: #d5d5d5;
  cursor: not-allowed;
}

.emotion-0>input[type='radio']:disabled+label:before {
  border: 2px solid #d5d5d5;
  cursor: not-allowed;
}

.emotion-0>input[type='radio']:checked+label:after {
  background-color: #3697f2;
  border-radius: 50%;
  box-sizing: border-box;
  content: '';
  height: 8px;
  line-height: 8px;
  left: 4px;
  position: absolute;
  top: 4px;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
  width: 8px;
}

.emotion-0>input[type='radio']:disabled:checked+label:after {
  color: #d5d5d5;
  border: 2px solid #d5d5d5;
  background-color: #d5d5d5;
  cursor: not-allowed;
}

<div
  class="emotion-0 denali-radiobutton"
  data-testid="radiobutton-wrapper"
>
  <input
    id="radiobutton-test-radiobutton-a"
    name="test-radiobutton"
    type="radio"
    value="a"
  />
  <label
    for="radiobutton-test-radiobutton-a"
  >
    Option A
  </label>
</div>
`;
